--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <title>Multiplayer Tetris</title>
   <link rel="stylesheet" href="style.css" />
 
-  <!-- ✅ Socket.IO client from CDN -->
+  <!-- ✅ Load Socket.IO client from CDN BEFORE your script -->
   <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
 </head>
 <body>
-  <h1>Multiplayer Tetris (Local)</h1>
+  <h1>Multiplayer Tetris</h1>
   
   <!-- Join Room UI -->
   <div id="joinDiv">
@@ -27,8 +27,7 @@
     <div id="otherPlayers"></div>
   </div>
 
-  <!-- ✅ Your client script -->
+  <!-- ✅ Load your multiplayer client logic -->
   <script src="client.js"></script>
 </body>
 </html>
-
