--- a/index.html
+++ b/index.html
@@ -5,29 +5,31 @@
   <title>Multiplayer Tetris</title>
   <link rel="stylesheet" href="style.css" />
 
-  <!-- ✅ Load Socket.IO client from CDN BEFORE your script -->
+  <!-- ✅ Load Socket.IO -->
   <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
+
+  <!-- ✅ Load your core game logic (must define initGame) -->
+  <script src="game.js"></script> <!-- or whatever JS file has initGame -->
+
+  <!-- ✅ Then load multiplayer logic -->
+  <script src="client.js"></script>
 </head>
 <body>
   <h1>Multiplayer Tetris</h1>
-  
+
   <!-- Join Room UI -->
   <div id="joinDiv">
     <input type="text" id="roomId" placeholder="Enter room name" />
     <button id="joinBtn">Join Room</button>
   </div>
-  
-  <!-- Actual Tetris Game + Info -->
+
+  <!-- Tetris game canvas and multiplayer UI -->
   <div id="gameArea" style="display:none;">
     <canvas id="tetris" width="300" height="600"></canvas>
     <div id="scoreBoard">Score: <span id="score">0</span></div>
     <div id="message"></div>
-    
     <h2>Other Players</h2>
     <div id="otherPlayers"></div>
   </div>
-
-  <!-- ✅ Load your multiplayer client logic -->
-  <script src="client.js"></script>
 </body>
 </html>
