--- a/index.html
+++ b/index.html
@@ -21,28 +21,46 @@
       font-size: 1rem;
       margin: 0.5rem;
     }
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+      background-color: #f0f0f0;
+    }
   </style>
 </head>
-<body style="margin: 0; padding: 0; font-family: sans-serif; background-color: #f0f0f0;">
+<body>
+  <!-- Join Room Section -->
   <div id="joinDiv" style="text-align: center; padding: 2rem;">
     <h2>Join a Room</h2>
     <input type="text" id="roomId" placeholder="Enter Room ID" />
     <button id="joinBtn">Join Room</button>
   </div>
+
+  <!-- Lobby Section -->
   <div id="lobbyDiv" style="display: none; text-align: center; padding: 2rem;">
     <h2>Lobby</h2>
     <p id="roomLabel"></p>
     <button id="startBtn" disabled>Waiting for Player...</button>
   </div>
+
+  <!-- Game Area Section -->
   <div id="gameArea" style="display: none; padding: 2rem;">
     <h2 style="text-align: center;">Multiplayer Tetris</h2>
-    <div style="display: flex; justify-content: center; gap: 40px; flex-wrap: wrap; align-items: flex-start;">
-      <div>
-        <p id="score">Score: 0</p>
-        <canvas id="tetris" width="300" height="600"></canvas>
-        <p id="message"></p>
+
+    <!-- Centered container with fixed width -->
+    <div style="max-width: 900px; margin: 0 auto;">
+      <div style="display: flex; justify-content: center; gap: 40px; align-items: flex-start;">
+        <!-- Your game -->
+        <div>
+          <p id="score">Score: 0</p>
+          <canvas id="tetris" width="300" height="600"></canvas>
+          <p id="message"></p>
+        </div>
+
+        <!-- Opponent game(s) -->
+        <div id="otherPlayers" style="display: flex; gap: 20px;"></div>
       </div>
-      <div id="otherPlayers" style="display: flex; gap: 20px;"></div>
     </div>
   </div>
 </body>
