--- a/index.html
+++ b/index.html
@@ -3,43 +3,55 @@
 <head>
   <meta charset="UTF-8" />
   <title>Multiplayer Tetris</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
+
+  <!-- scripts -->
   <script src="/socket.io/socket.io.js"></script>
   <script defer src="game.js"></script>
   <script defer src="client.js"></script>
 </head>
 <body>
-  <!-- Join Room Section (Visible by default) -->
+  <!-- ──────── JOIN SCREEN ──────── -->
   <div id="joinDiv" class="active">
-    <h2>Join a Room</h2>
-    <input type="text" id="roomId" placeholder="Enter Room ID" />
+    <h2>Join a Multiplayer Tetris Room</h2>
+
+    <div style="max-width:400px;margin:auto;text-align:left;">
+      <h3 style="color:#00ffe0">How it works</h3>
+      <ul style="font-size:.95rem;line-height:1.6">
+        <li>Enter <strong>your name</strong> and a <strong>Room ID</strong>.</li>
+        <li>Share the Room ID with a friend so you join together.</li>
+        <li>When 2 players are inside, <strong>Start Game</strong> activates automatically.</li>
+        <li><kbd>◀︎▶︎▼</kbd> move &nbsp;|&nbsp; <kbd>▲</kbd> rotate &nbsp;|&nbsp; <kbd>Space</kbd> hard-drop.</li>
+      </ul>
+    </div>
+
+    <input type="text" id="playerName" placeholder="Enter your name" />
+    <input type="text" id="roomId"     placeholder="Enter Room ID" />
     <button id="joinBtn">Join Room</button>
   </div>
 
-  <!-- Lobby Section (Hidden initially) -->
+  <!-- ──────── LOBBY ──────── -->
   <div id="lobbyDiv">
     <h2>Lobby</h2>
     <p id="roomLabel"></p>
-    <button id="startBtn" disabled>Waiting for Player...</button>
+    <button id="startBtn" disabled>Waiting for Player…</button>
   </div>
 
-  <!-- Game Area Section (Hidden initially) -->
+  <!-- ──────── GAME AREA ──────── -->
   <div id="gameArea">
-    <h2 style="text-align: center;">Multiplayer Tetris</h2>
-
-    <!-- Centered container with fixed width -->
-    <div style="max-width: 900px; margin: 0 auto;">
-      <div style="display: flex; justify-content: center; gap: 40px; align-items: flex-start;">
-        <!-- Your game -->
+    <h2 style="text-align:center">Multiplayer Tetris</h2>
+    <div style="max-width:900px;margin:0 auto;">
+      <div style="display:flex;justify-content:center;gap:40px;align-items:flex-start;">
+        <!-- Game board -->
         <div>
           <p id="score">Score: 0</p>
           <canvas id="tetris" width="300" height="600"></canvas>
           <p id="message"></p>
         </div>
 
-        <!-- Opponent game(s) -->
-        <div id="otherPlayers" style="display: flex; gap: 20px;"></div>
+        <!-- Opponent boards -->
+        <div id="otherPlayers" style="display:flex;gap:20px;"></div>
       </div>
     </div>
   </div>
