--- a/index.html
+++ b/index.html
@@ -12,21 +12,26 @@
 <body>
   <!-- ░░ JOIN SCREEN ░░ -->
   <div id="joinDiv" class="active">
-    <h2>Join a Multiplayer Tetris Room</h2>
+    <div class="joinContent">
+      <!-- Rules column (left) -->
+      <div class="rules">
+        <h3>How it works</h3>
+        <ul>
+          <li>Enter <strong>your name</strong> and a <strong>Room&nbsp;ID</strong>.</li>
+          <li>Share that Room ID with a friend so you join together.</li>
+          <li>Once <strong>both players</strong> are present, click <em>Start&nbsp;Game</em>.</li>
+          <li><kbd>◀︎▶︎▼</kbd> move &nbsp;|&nbsp; <kbd>▲</kbd> rotate &nbsp;|&nbsp; <kbd>Space</kbd> hard-drop.</li>
+        </ul>
+      </div>
 
-    <div style="max-width:400px;margin:auto;text-align:left;">
-      <h3 style="color:#00ffe0">How it works</h3>
-      <ul style="font-size:.95rem;line-height:1.6">
-        <li>Enter <strong>your name</strong> and a <strong>Room&nbsp;ID</strong>.</li>
-        <li>Share the Room ID with a friend so you join the same room.</li>
-        <li>Once <strong>both players</strong> are present, click <em>Start&nbsp;Game</em> to begin.</li>
-        <li><kbd>◀︎▶︎▼</kbd> move &nbsp;|&nbsp; <kbd>▲</kbd> rotate &nbsp;|&nbsp; <kbd>Space</kbd> hard-drop.</li>
-      </ul>
+      <!-- Form column (center) -->
+      <div class="joinForm">
+        <h2>Join a Multiplayer Tetris Room</h2>
+        <input type="text" id="playerName" placeholder="Enter your name" />
+        <input type="text" id="roomId"     placeholder="Enter Room ID" />
+        <button id="joinBtn">Join Room</button>
+      </div>
     </div>
-
-    <input type="text" id="playerName" placeholder="Enter your name" />
-    <input type="text" id="roomId"     placeholder="Enter Room ID" />
-    <button id="joinBtn">Join Room</button>
   </div>
 
   <!-- ░░ LOBBY ░░ -->
@@ -41,13 +46,11 @@
     <h2 style="text-align:center">Multiplayer Tetris</h2>
     <div style="max-width:900px;margin:0 auto;">
       <div style="display:flex;justify-content:center;gap:40px;align-items:flex-start;">
-        <!-- Your board -->
         <div>
           <p id="score">Score: 0</p>
           <canvas id="tetris" width="300" height="600"></canvas>
           <p id="message"></p>
         </div>
-        <!-- Opponents -->
         <div id="otherPlayers" style="display:flex;gap:20px;"></div>
       </div>
     </div>
