--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
         <h3>How it works</h3>
         <ul>
           <li>Enter <strong>your name</strong> and a <strong>Room&nbsp;ID</strong>.</li>
-          <li>Share that Room ID with a friend so you join together.</li>
-          <li>Once <strong>both players</strong> are present, click <em>Start&nbsp;Game</em>.</li>
-          <li><kbd>◀︎▶︎▼</kbd> move &nbsp;|&nbsp; <kbd>▲</kbd> rotate &nbsp;|&nbsp; <kbd>Space</kbd> hard-drop.</li>
+          <li>Share that Room ID with a friend so you both join the same room.</li>
+          <li>When <strong>both players</strong> are present, <strong>either</strong> one can click
+              <em>Start&nbsp;Game</em> — it starts the game for both of you.</li>
+          <li>Use the <strong>arrow&nbsp;keys</strong> to move pieces
+              (<kbd>◀︎</kbd>/<kbd>▶︎</kbd>/<kbd>▼</kbd>) and <kbd>▲</kbd> to rotate.
+              Press <kbd>Space</kbd> for a hard-drop.</li>
         </ul>
       </div>
 
@@ -46,11 +49,13 @@
     <h2 style="text-align:center">Multiplayer Tetris</h2>
     <div style="max-width:900px;margin:0 auto;">
       <div style="display:flex;justify-content:center;gap:40px;align-items:flex-start;">
+        <!-- Your board -->
         <div>
           <p id="score">Score: 0</p>
           <canvas id="tetris" width="300" height="600"></canvas>
           <p id="message"></p>
         </div>
+        <!-- Opponents -->
         <div id="otherPlayers" style="display:flex;gap:20px;"></div>
       </div>
     </div>
