--- a/index.html
+++ b/index.html
@@ -13,22 +13,20 @@
   <!-- ░░ JOIN SCREEN ░░ -->
   <div id="joinDiv" class="active">
     <div class="joinContent">
-      <!-- Rules column (left) -->
+      <!-- Rules (left) -->
       <div class="rules">
         <h3>How it works</h3>
         <ul>
           <li>Enter <strong>your name</strong> and a <strong>Room&nbsp;ID</strong>.</li>
-          <li>Share that Room ID with a friend so you both join the same room.</li>
+          <li>Share that ID so you both join the same room.</li>
           <li>When <strong>both players</strong> are present, either one can click
-              <em>Start&nbsp;Game</em>; it starts for both of you.</li>
-          <li>Use <strong>arrow&nbsp;keys</strong> to move (<kbd>◀︎</kbd>/<kbd>▶︎</kbd>/<kbd>▼</kbd>),
-              <kbd>▲</kbd> to rotate &nbsp;|&nbsp; <kbd>Space</kbd> to hard-drop.</li>
-          <li>Need a break? Click the <strong>Pause</strong> button at any time —
-              the game pauses (and later resumes) for <em>both</em> players.</li>
+              <em>Start&nbsp;Game</em>; it begins for both.</li>
+          <li>Controls – <strong>arrow&nbsp;keys</strong> move/rotate, <kbd>Space</kbd> hard-drop.</li>
+          <li>Need a break? Click <strong>Pause game</strong>. Either player can resume.</li>
         </ul>
       </div>
 
-      <!-- Form column (center) -->
+      <!-- Form (center) -->
       <div class="joinForm">
         <h2>Join a Multiplayer Tetris Room</h2>
         <input type="text" id="playerName" placeholder="Enter your name" />
@@ -49,16 +47,19 @@
   <div id="gameArea">
     <h2 style="text-align:center">Multiplayer Tetris</h2>
 
-    <!-- Pause button -->
-    <button id="pauseBtn" class="pauseButton">Pause</button>
+    <!--  Pause / Resume button (right-side) -->
+    <button id="pauseBtn" class="pauseButton">Pause&nbsp;game</button>
 
+    <!-- Boards wrapper -->
     <div style="max-width:900px;margin:0 auto;">
       <div style="display:flex;justify-content:center;gap:40px;align-items:flex-start;">
+        <!-- Your board -->
         <div>
           <p id="score">Score: 0</p>
           <canvas id="tetris" width="300" height="600"></canvas>
           <p id="message"></p>
         </div>
+        <!-- Opponents -->
         <div id="otherPlayers" style="display:flex;gap:20px;"></div>
       </div>
     </div>
